--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "postbuild": "next-sitemap"
   },
   "dependencies": {
-    "@react-pdf/renderer": "^2.1.1",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.7.5",
     "globby": "^11.0.0",
@@ -18,13 +17,12 @@
     "next-optimized-images": "^2.5.4",
     "prettier": "^2.1.2",
     "rc-drawer": "^4.1.0",
-    "react": "16.13.0",
     "react-cookie-consent": "^7.4.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "16.13.0",
     "react-ga": "^3.1.2",
     "react-icons": "^3.10.0",
-    "react-modal": "^3.15.1",
+    "react-loading-skeleton": "^3.1.0",
     "react-modal-video": "^1.2.6",
     "react-multi-carousel": "^2.5.5",
     "react-scroll": "^1.8.0",
